[package]
name = "mm32f3270-pac"
version.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true
readme.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.7.6"
cortex-m-rt = { version = "0.7.2", optional = true }
critical-section = { version = "1.1.1", optional = true }
vcell = "0.1.3"

[features]
rt = ["cortex-m-rt/device"]
